fixed alignment for the address

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -47,6 +47,11 @@ ul {
   font-weight: bold;
   text-transform: uppercase;
 }
+.address {
+  vertical-align: top;
+  font-weight: bold;
+  text-transform: uppercase;
+}
 p {
   font-family: 'PT Serif', serif;
   font-size: .875em;
